--- a/resources/scorehud.yml
+++ b/resources/scorehud.yml
@@ -6,10 +6,10 @@ scorehud-version: 1
 # Changing titles of the scoreboard.
 # Can be of any number.
 server-names:
-- "§l§aServer §dName"
-- "§l§bServer §cName"
-- "§l§cServer §bName"
-- "§l§dServer §aName"
+- "§l§aModern §dCraft"
+- "§l§bModern §cCraft"
+- "§l§cModern §bCraft"
+- "§l§dModern §aCraft"
 
 # Note: You can find links to the required/supported plugins via the README.md.
 # IMPORTANT NOTE: You can only set a maximum of 15 lines and no more.
